add vote queue
